[fixing-stage:: cashier_id parsing in order_creation]